--- a/basic-tutorial/public/index.html
+++ b/basic-tutorial/public/index.html
@@ -6,8 +6,9 @@
         <link rel="shortcut icon" href="./favicon.ico">
     </head>
     <body>
-        <div id="app">
-            <h1>Redux Basics</h1>
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <h1>Redux Basics</h1>
+        <div id="root">
         </div>
         <script src="bundle.js"></script>
     </body>
